[gd_scene load_steps=5 format=3 uid="uid://cpbhslmklal5g"]

[ext_resource type="Script" uid="uid://c7rmfbfgoeg11" path="res://bullet.gd" id="1_v8qja"]
[ext_resource type="Texture2D" uid="uid://crvux2ga6s3k1" path="res://art/bullet.png" id="2_t4vbm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2b2rl"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b7duk"]
radius = 20.0

[node name="bullet" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_v8qja")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2b2rl")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_t4vbm")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_b7duk")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_hurtbox_area_shape_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
